--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Upperlink:Kyc Portal</title>
+  <title>Mware: College Dreams Web Portal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
-  <link rel="icon" type="image/png" href="upperlinklogo.jpg" id="theme-color">
+  <link rel="icon" type="image/png" href="MwareCollegeDreamsWeb.png" id="theme-color">
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
 </head>
@@ -69,7 +69,7 @@
     <div class="page-loader-wrapper" style="text-align: center; background:white">
       <div class="loader">
         <div class="m-t-30">
-          <img src="../assets/images/upperlink-logo.png" class="welcome-loader"  height="48" alt="Upperlink">
+          <img src="../assets/images/MwareCollegeDreamsWeb.png" class="welcome-loader"  height="48" alt="MwareCollegeDreamsWeb">
         </div>
       </div>
     </div>
