--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -6,15 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
-  <link rel="icon" type="image/png" href="MwareCollegeDreamsWeb.png" id="theme-color">
+  <link rel="icon" type="image/png" href="./assets/images/MwareCollegeDreamsWeb.png" id="theme-color">
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200|Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link href="./assets/css/select2.min.css" rel="stylesheet" />
+
 </head>
 <style>
   .m-t-30 {
     margin-top: 30px
   }
-
   .page-loader-wrapper .loader {
     position: relative;
     top: calc(40% - 30px)
@@ -30,16 +32,13 @@
     height: 100%;
     overflow: hidden
   }
-
   .page-loader-wrapper p {
     color: #fff
   }
-
   .page-loader-wrapper .loader {
     position: relative;
     top: calc(40% - 30px)
   }
-
   .welcome-loader {
     position: absolute;
     margin: auto;
@@ -48,7 +47,6 @@
     right: 0;
     animation: logo 1.0s infinite;
   }
-
   @keyframes logo {
     0% {
       opacity: 0.1;
@@ -59,20 +57,34 @@
       transform: scale(1);
     }
   }
-
-
-
 </style>
 
-<body>
+<body class="landing-page sidebar-collapse">
   <app-root>
     <div class="page-loader-wrapper" style="text-align: center; background:white">
       <div class="loader">
         <div class="m-t-30">
-          <img src="../assets/images/MwareCollegeDreamsWeb.png" class="welcome-loader"  height="48" alt="MwareCollegeDreamsWeb">
+          <img src="assets/images/MwareCollegeDreamsWeb.png" class="welcome-loader"  height="48"
+               alt="MwareCollegeDreamsWeb">
         </div>
       </div>
     </div>
+    <!--   Core JS Files   -->
+    <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+    <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+    <script src="./assets/js/plugins/moment.min.js"></script>
+    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+    <script src="./assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+    <!--  Google Maps Plugin    -->
+    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+    <script src="./assets/js/material-kit.js" type="text/javascript"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/select2.min.js"></script>
+    <script>
+    </script>
   </app-root>
 </body>
 </html>
